--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.2.4",
     "@editorjs/editorjs": "^2.25.0",
     "@editorjs/table": "^2.0.2",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "framer-motion": "^6.5.0",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
